# python_for_data_science

day_0/ex00/: Hello.py
day_0/ex01/: format_ft_time.py
day_0/ex02/: find_ft_type.py
day_0/ex03/: NULL_not_found.py
day_0/ex04/: whatis.py
day_0/ex05/: building.py
day_0/ex06/: filterstring.py  ft_filter.py
day_0/ex07/: sos.py
day_0/ex08/: Loading.py  tester.py
day_0/ex09/ft_package/: README.md  pyproject.toml
day_0/ex09/ft_package/src/ft_package/: count_in_list.py
day_0/ex09/ft_package/src/ft_package.egg-info/: PKG-INFO
day_1/ex00/: give_bmi.py
day_1/ex01/: array2D.py
day_1/ex02/: load_image.py
day_1/ex03/: load_image.py  zoom.py
day_1/ex04/: load_image.py  rotate.py
day_1/ex05/: pimp_image.py
day_2/ex00/: load_csv.py
day_2/ex01/: aff_life.py  load_csv.py
day_2/ex02/: aff_pop.py
day_2/ex03/: load_csv.py  projection_life.py
day_3/ex00/: S1E9.py
day_3/ex01/: S1E7.py
day_3/ex02/: DiamondTrap.py  S1E7.py
day_3/ex03/: ft_calculator.py
day_3/ex04/: ft_calculator.py
day_4/ex00/: statistics.py
day_4/ex01/: in_out.py
day_4/ex02/: callLimit.py
day_4/ex03/: new_student.py
