[project]
name = "ft_package"
version = "0.0.1"
authors = [
  {name="eagle"},
  {email="eagle@42.fr"}
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/eagle/ft_package"